# binary-hamming-dist

./: .gitignore  Cargo.toml  README.md
src/: bitarr.rs  cli.rs  lib.rs  trimat.rs
